# avex

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  webcam.c  webcam.h
